Fix icon alignments and add rule btn everywhere

--- a/panel-app/src/components/subitem-edit-config/subitem-edit-config.scss
+++ b/panel-app/src/components/subitem-edit-config/subitem-edit-config.scss
@@ -78,7 +78,8 @@
 		width: fit-content;
 
 		ion-icon {
-			margin: -2px 8px 0 0;
+			margin: 0px 8px 0 0;
+			align-self: baseline;
 		}
 	}
 
